--- a/src/Style/styleHome.css
+++ b/src/Style/styleHome.css
@@ -1,9 +1,9 @@
 body {
     margin: 0;
     padding: 0;
-    background: linear-gradient(to bottom, #1d7c00, #f5f5f5);
 }
-nav{
+
+nav {
     width: 100%;
     background-color: red;
 }
@@ -15,4 +15,33 @@ nav{
 *::-webkit-scrollbar-thumb {
     border-radius: 20px;
     border: 3px solid #1d7c00;
+}
+
+.navbar {
+    width: 100%;
+    height: 5rem;
+    background-color: #157347;
+    padding: 10px 0;
+    position: fixed;
+    top: 0;
+    left: 0;
+    z-index: 1000;
+}
+
+/* Ajusta a logo */
+.navbar-brand img {
+    max-width: 180px;
+    height: auto;
+    margin-left: 2rem;
+    margin-right: 3rem;
+}
+
+.navbar-nav .nav-item .nav-link.active {
+    color: #ffffff;
+    margin-right: 20px;
+    font-weight: bold;  
+}
+
+.nav-item .nav-link.active:hover {
+    color: #74c485;
 }
